--- a/smashingIllini.html
+++ b/smashingIllini.html
@@ -16,6 +16,9 @@
 		<p>photos</p>
 		</div>
 		<div class="navButton">
+		<p>player stats</p>
+		</div>
+		<div class="navButton">
 			<p>schedule</p>
 		</div>
 				<div class="navButton">
