--- a/smashingIllini.html
+++ b/smashingIllini.html
@@ -6,7 +6,7 @@
 <body>
 	<div id="header">
 		<img src="headerLogo.jpg" id = "headerLogo">
-		<span id="headerText" >Smashing Illini. Probably wanna replace this with a picture of the union/alma/campus/rotation of our photos.</span>
+		<img src ="testPic.jpg" class = "headerPic">
 	</div>
 	<div id ="navbar">
 		<div class = "navButton">
